* Always make sure the reference to the bitmap is actually released. This   should fix bug #6824. * Don't queue more pictures if we can only use a single CPU, and the queue is   already busy.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39486 a95241bf-73f2-0310-859d-f6bbb57e9c96